# edgeAI

./: .gitignore  .pylintrc  404.html  README.md  README_object_detection_toolkit.md  index.html  index.md  jetson_cnn_toolkit.py  jetson_object_detection_toolkit.py  mkdocs.yml  pyrightconfig.json  setup.py
.devcontainer/: devcontainer.json
cpumemory/: CPU_System.ipynb  C_GCC_Compiler_and_Assenbly.ipynb  C_Review_and_Memory_Layout.ipynb  Multiprocess_and_Concurrent.ipynb  matrixmultiple.ipynb  memorymountainv2.ipynb
curriculum/: 00_sjsujetsontool_guide.md  01_linux_jetson_intro.md  01a_nvidia_jetson.md  01b_linux_basics.md  01b_linux_networking_tools.md  01c_packet_sniffing_monitoring.md  01d_linux_cyber_defense_basics.md  01e_linux_cyber_attack_simulation.md  01f_jetson_iot_hub_integration.md  02_programming_env_python_cpp_cuda.md  03_accelerated_computing_python_cuda.md  04_numpy_pytorch_intro.md  05_cnn_image_processing_jetson.md  06_transformers_llms_jetson.md  07_nlp_applications_llm_optimization.md  08_prompt_engineering_langchain_jetson.md  09_rag_app_langchain_jetson.md  10_local_ai_agents_jetson.md  11_final_challenges_hackathon.md  12_jetson_gpio_sensors.md  13_jetson_opencv_robotics.md  14_jetson_autonomous_navigation.md  15_robot_object_detection_yolo.md  16_robot_llm_multimodal_agent.md  17_ros2_intro_jetson.md  18_ros2_gpio_sensor_integration.md  19_isaac_ros_setup_overview.md  (+3 more)
edgeLLM/edge_agent/: README.md  pyproject.toml
edgeLLM/edge_agent/src/edge_agent/: __init__.py  react_loop.py  tool_calling.py  tools.py
jetson/ros2_jetson_detect/: README.md  package.xml  setup.cfg  setup.py  test_gpu_detect.py
jetson/ros2_jetson_detect/launch/: detect.launch.py
jetson/ros2_jetson_detect/ros2_jetson_detect/: detector_node.py  still_image_publisher.py
(+274 files in other folders)
