<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://relaxng.org/ns/structure/1.0"?>
<package format="3">
  <name>ros2_jetson_detect</name>
  <version>0.1.0</version>
  <description>ROS 2 node wrapping jetson_object_detection_toolkit.py for object detection on Jetson Orin Nano.</description>
  <maintainer email="kaikai.liu@sjsu.edu">Kaikai Liu</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_publisher</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
